<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">F8Network2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ip">Ip:</string>
    <string name="request_port">Ansluta på port:</string>
    <string name="response_port">Lyssna på port:</string>
    <string name="connect">Koppla upp</string>
    <string name="send">Skicka förfrågan</string>
    <string name="disconnect">Koppla ner</string>
    <string name="number1">Tal 1:</string>
    <string name="number2">Tal 2:</string>
    <string name="operation">Räknesätt:</string>
    <string name="result">Resultat:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
